2003-10-16  Paolo Carlini  <pcarlini@suse.de>

PR libstdc++/12540
	* config/locale/gnu/monetary_members.cc
	(moneypunct<wchar_t, true/false>::_M_initialize_moneypunct):
	Don't leak memory if new throws.
	* src/locale.cc (locale::locale(const char*)): In order not
	to leak memory in case new throws, use a basic_string type
	for __res too and avoid strdup.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72553 138bc75d-0d04-0410-961f-82ee72b054a4